tests/NormalTests/paczka1/small_fuzzy/11546719.err
Error in line 2: A812 A524 33,7
Error in line 9: ks4h A812 2,3
